test/e2e/egress-ipv6/client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ipv6-client
  labels:
    app: ipv6-client
spec:
  containers:
  - name: client
    image: busybox:1.36
    command: ["sh", "-c", "sleep 900"]
